--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -81,12 +81,14 @@
                 font-size: 38rpx;
                 color: #E3A33D;
                 letter-spacing: 0;
+                font-weight: bold;
             }
             .out-num {
                 font-family: PingFangSC-Semibold;
                 font-size: 38rpx;
                 color: #206DE7;
                 letter-spacing: 0;
+                font-weight: bold;
             }
         }
         .split-line {
@@ -98,6 +100,21 @@
     .list-container {
         margin-top: 18rpx;
         // height: 800rpx;
+        .empty {
+            width: 100%;
+            height: 100%;
+            background: rgba(228, 228, 228, 0.6);
+            .empty-img {
+                width: 236rpx;
+                height: 154rpx;
+            }
+            .no-data {
+                font-family: PingFangSC-Regular;
+                font-size: 30rpx;
+                color: #9B9B9B;
+                letter-spacing: 0;
+            }
+        }
         .list-box {
             width: 676rpx;
             margin-left: 18rpx;
