--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -94,6 +94,7 @@
   font-size: 38rpx;
   color: #E3A33D;
   letter-spacing: 0;
+  font-weight: bold;
 }
 
 .container .count-tabel .count-tabel-item .out-num {
@@ -101,6 +102,7 @@
   font-size: 38rpx;
   color: #206DE7;
   letter-spacing: 0;
+  font-weight: bold;
 }
 
 .container .count-tabel .split-line {
@@ -111,6 +113,24 @@
 
 .container .list-container {
   margin-top: 18rpx;
+}
+
+.container .list-container .empty {
+  width: 100%;
+  height: 100%;
+  background: rgba(228, 228, 228, 0.6);
+}
+
+.container .list-container .empty .empty-img {
+  width: 236rpx;
+  height: 154rpx;
+}
+
+.container .list-container .empty .no-data {
+  font-family: PingFangSC-Regular;
+  font-size: 30rpx;
+  color: #9B9B9B;
+  letter-spacing: 0;
 }
 
 .container .list-container .list-box {
