--- a/pages/inoutdetail/inoutdetail.wxml
+++ b/pages/inoutdetail/inoutdetail.wxml
@@ -1,6 +1,6 @@
 <view class="container flexc0c">
     <van-nav-bar title="收支明细">
-        <image class="filter" src="../../assets/images/screening.png" bindtap="filter" slot="left"></image>
+        <image hidden="{{IO!=1}}" class="filter" src="../../assets/images/screening.png" bindtap="filter" slot="left"></image>
     </van-nav-bar>
     <view class="top-select flexr0c">
         <view class="top-select-item-box flexrcc" bind:tap="selectIO" data-type="1">
@@ -11,19 +11,19 @@
         </view>
     </view>
     <!-- 收支明细部分 -->
-    <view hidden="{{IO!=1}}" class="">
+    <view hidden="{{IO!=1}}" class="" style="width:100%;">
         <view class="middle-box flexr0c">
             <view class="income-box flexrcc">
                 <view class="middle-label">收入</view>
-                <view class="income-num">+50000.00</view>
+                <view class="income-num">+{{incomeMoney}}</view>
             </view>
             <view class="split-line"></view>
             <view class="outcome-box flexrcc">
                 <view class="middle-label">支出</view>
-                <view class="outcome-num">-20000.00</view>
+                <view class="outcome-num">-{{outcomeMoney}}</view>
             </view>
         </view>
-        <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-hair-200)*2}}rpx">
+        <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-hair-200)*2}}rpx;">
             <view class="list-box">
                 <view class="list-item flexrbc" wx:for="{{list}}" wx:key="index">
                     <view class="check-type" hidden="{{item.checkState==1}}">未审核</view>
@@ -31,22 +31,32 @@
                         <image class="paytype" src="../../assets/images/WeChat.png" hidden="{{item.tradeType!=4}}"></image>
                         <image class="paytype" src="../../assets/images/Alipay.png" hidden="{{item.tradeType!=3}}"></image>
                         <image class="paytype" src="../../assets/images/zhuanzhanghuikuan.png" hidden="{{item.tradeType!=1}}"></image>
+                        <image class="paytype" src="../../assets/images/out-large.png" hidden="{{item.tradeType!=2}}"></image>
+                        <image class="paytype" src="../../assets/images/card-large.png" hidden="{{item.tradeType!=5}}"></image>
                         <view class="list-item-content-box">
-                            <view class="list-item-title">渑池豪瑞矿产品购销站</view>
-                            <view class="list-item-time">2020-08-22 14:23:34</view>
-                            <view class="list-item-address">支付宝|三门峡</view>
+                            <view class="list-item-title">{{item.enterpriseName}}</view>
+                            <view class="list-item-time">
+                                {{item.eventTime.year}}-{{item.eventTime.monthValue}}-{{item.eventTime.dayOfMonth}} {{item.eventTime.hour}}:{{item.eventTime.minute}}:{{item.eventTime.second}}
+                            </view>
+                            <view class="list-item-address">{{item.type}}|{{item.orgName}}</view>
                         </view>
                     </view>
                     <view class="list-item-right">
                         <view class="flexr0c">
-                            <view class="{{inout==1?'list-item-num':'list-item-num'}}">
-                                +1258000
+                            <view class="{{item.sign==1?'list-item-num':'list-item-num2'}}">
+                                <text hidden="{{item.sign!=1}}">+</text>
+                                <text hidden="{{item.sign!=2}}">-</text>
+                                {{item.money}}
                             </view>
                             <image src="../../assets/images/The arrow.png" />
                         </view>
-                        <view class="in-type">入账中</view>
+                        <view hidden="{{item.checkState==1}}" class="in-type">入账中</view>
                     </view>
                 </view>
+            </view>
+            <view hidden="{{list.length!=0}}" class="empty flexccc">
+                <image class="empty-img" src="../../assets/images/no-data.png" mode="aspectFit|aspectFill|widthFix"></image>
+                <view class="no-data">暂无数据</view>
             </view>
         </scroll-view>
     </view>
@@ -64,21 +74,21 @@
                 <view class="label-sub">单位（万元）</view>
             </view>
             <view class="chartbar1-box-item">
-                <ec-canvas id="mychart-dom-bar" canvas-id="mychart-bar" ec="{{ ecbar1 }}" bind:tap="changeMonth" force-use-old-canvas="true"></ec-canvas>
+                <ec-canvas id="mychart-dom-bar1" canvas-id="mychart-bar1" ec="{{ecbar}}" bind:tap="changeMonth" ></ec-canvas>
             </view>
         </view>
         <view class="chartbar2-box flexc0c">
             <view class="chartbar2-top flexc0c">
-                <view class="chartbar2-title">2020年08月1日---2020年08月31日</view>
+                <view class="chartbar2-title">{{startMonth}}---{{endMonth}}</view>
                 <view class="inout-box flexr0c">
                     <view class="income flexr0c">
                         <view class="income-label">收入</view>
-                        <view class="income-num">+50000.00</view>
+                        <view class="income-num">+{{incomeMoney}}</view>
                     </view>
                     <view class="split-line2"></view>
                     <view class="outcome flexr0c">
                         <view class="outcome-label">支出</view>
-                        <view class="outcome-num">-20000.00</view>
+                        <view class="outcome-num">-{{outcomeMoney}}</view>
                     </view>
                 </view>
             </view>
@@ -136,7 +146,7 @@
                 <view class="label-sub">单位（万元）</view>
             </view>
             <view class="chartline-container">
-                <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ecline}}" force-use-old-canvas="true"></ec-canvas>
+                <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ecline}}"></ec-canvas>
             </view>
         </view>
         <view class="chartpie-box">
@@ -145,7 +155,7 @@
                 <view class="label-title">交易类型占比</view>
             </view>
             <view class="chartpie-container">
-                <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ ecpie }}" force-use-old-canvas="true"></ec-canvas>
+                <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ ecpie }}"></ec-canvas>
             </view>
         </view>
         <view class="rankcompany">
