--- a/pages/inoutdetail/inoutdetail.wxss
+++ b/pages/inoutdetail/inoutdetail.wxss
@@ -90,6 +90,7 @@
   font-size: 34rpx;
   color: #E3A33D;
   letter-spacing: 0;
+  font-weight: bold;
 }
 
 .container .middle-box .outcome-box {
@@ -101,6 +102,7 @@
   font-size: 34rpx;
   color: #206DE7;
   letter-spacing: 0;
+  font-weight: bold;
 }
 
 .container .middle-box .middle-label {
@@ -111,6 +113,24 @@
   margin-right: 24rpx;
 }
 
+.container .empty {
+  width: 100%;
+  height: 100%;
+  background: rgba(228, 228, 228, 0.6);
+}
+
+.container .empty .empty-img {
+  width: 236rpx;
+  height: 154rpx;
+}
+
+.container .empty .no-data {
+  font-family: PingFangSC-Regular;
+  font-size: 30rpx;
+  color: #9B9B9B;
+  letter-spacing: 0;
+}
+
 .container .list-box {
   background-color: #fafafa;
 }
@@ -118,6 +138,7 @@
 .container .list-box .list-item {
   width: 714rpx;
   padding-left: 18rpx;
+  padding-right: 18rpx;
   padding-top: 24rpx;
   border-bottom: 2rpx solid #ddd;
   position: relative;
@@ -267,7 +288,7 @@
 }
 
 .container .analysis-box .chartbar1-box .chartbar1-box-item {
-  width: 100%;
+  width: 716rpx;
   height: 342rpx;
   border: 2rpx solid #000;
 }
