--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -34,6 +34,7 @@
         }
         .center {
             width: 100%;
+            height: 100%;
             .top-title {
                 font-family: PingFangSC-Semibold;
                 font-size: 30rpx;
