--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -64,7 +64,8 @@
     }
     .count-tabel {
         width: 716rpx;
-        height: 110rpx;
+        // height: 110rpx;
+        height: 55px;
         background-color: #fff;
         box-shadow: 0 20rpx 20rpx 0 rgba(0, 0, 0, 0.05);
         .count-tabel-item {
@@ -99,7 +100,8 @@
         }
     }
     .list-container {
-        margin-top: 18rpx;
+        // margin-top: 18rpx;
+        margin-top: 9px;
         // height: 800rpx;
         .empty {
             width: 100%;
