--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -72,7 +72,7 @@
 
 .container .count-tabel {
   width: 716rpx;
-  height: 110rpx;
+  height: 55px;
   background-color: #fff;
   box-shadow: 0 20rpx 20rpx 0 rgba(0, 0, 0, 0.05);
 }
@@ -113,7 +113,7 @@
 }
 
 .container .list-container {
-  margin-top: 18rpx;
+  margin-top: 9px;
 }
 
 .container .list-container .empty {
