--- a/pages/inoutdetail/inoutdetail.scss
+++ b/pages/inoutdetail/inoutdetail.scss
@@ -44,19 +44,21 @@
     .top-select {
         background-color: #fff;
         // height: 112rpx;
-        height: 112rpx;
+        height: 56px;
         width: 100%;
         box-shadow: 0 24rpx 24rpx 0 rgba(0, 0, 0, 0.05);
         .top-select-item-box {
             flex: 1;
-            height: 112rpx;
+            // height: 112rpx;
+            height: 56px;
             .top-select-item {
                 font-family: PingFangSC-Medium;
                 font-size: 25rpx;
                 color: #BBBBBB;
                 letter-spacing: 0;
                 text-align: center;
-                line-height: 102rpx;
+                // line-height: 102rpx;
+                line-height: 52px;
                 width: 275rpx;
                 border-bottom: 8rpx solid #fff;
             }
@@ -68,7 +70,8 @@
     }
     .middle-box {
         background: rgba(228, 228, 228, 0.60);
-        height: 100rpx;
+        // height: 100rpx;
+        height: 50px;
         width: 100%;
         .split-line {
             width: 2rpx;
