--- a/pages/inoutdetail/inoutdetail.wxml
+++ b/pages/inoutdetail/inoutdetail.wxml
@@ -23,43 +23,7 @@
                 <view class="outcome-num">-{{outcomeMoney}}</view>
             </view>
         </view>
-        <scroll-view class="" wx:if="{{brand!='iphonex'}}" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-125/rpxR-hair-50)*2}}rpx;">
-            <view class="list-box">
-                <view class="list-item flexrbc" wx:for="{{list}}" wx:key="index">
-                    <view class="check-type" hidden="{{item.checkState==1}}">未审核</view>
-                    <view class="list-item-left flexr">
-                        <image class="paytype" src="../../assets/images/WeChat.png" hidden="{{item.tradeType!=4}}"></image>
-                        <image class="paytype" src="../../assets/images/Alipay.png" hidden="{{item.tradeType!=3}}"></image>
-                        <image class="paytype" src="../../assets/images/zhuanzhanghuikuan.png" hidden="{{item.tradeType!=1}}"></image>
-                        <image class="paytype" src="../../assets/images/out-large.png" hidden="{{item.tradeType!=2}}"></image>
-                        <image class="paytype" src="../../assets/images/card-large.png" hidden="{{item.tradeType!=5}}"></image>
-                        <view class="list-item-content-box">
-                            <view class="list-item-title">{{item.enterpriseName}}</view>
-                            <view class="list-item-time">
-                                {{item.eventTime.year}}-{{item.eventTime.monthValue}}-{{item.eventTime.dayOfMonth}} {{item.eventTime.hour}}:{{item.eventTime.minute}}:{{item.eventTime.second}}
-                            </view>
-                            <view class="list-item-address">{{item.type}}|{{item.orgName}}</view>
-                        </view>
-                    </view>
-                    <view class="list-item-right">
-                        <view class="flexr0c">
-                            <view class="{{item.sign==1?'list-item-num':'list-item-num2'}}">
-                                <text hidden="{{item.sign!=1}}">+</text>
-                                <text hidden="{{item.sign!=2}}">-</text>
-                                {{item.money}}
-                            </view>
-                            <image src="../../assets/images/The arrow.png" />
-                        </view>
-                        <view hidden="{{item.checkState==1}}" class="in-type">入账中</view>
-                    </view>
-                </view>
-            </view>
-            <view hidden="{{list.length!=0}}" class="empty flexccc">
-                <image class="empty-img" src="../../assets/images/no-data.png" mode="aspectFit|aspectFill|widthFix"></image>
-                <view class="no-data">暂无数据</view>
-            </view>
-        </scroll-view>
-        <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" wx:if="{{brand=='iphonex'}}" style="height:{{(screenHeight-125/rpxR-hair-50)*2}}rpx;">
+        <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-hair-44-50-50-56)}}px;">
             <view class="list-box">
                 <view class="list-item flexrbc" wx:for="{{list}}" wx:key="index">
                     <view class="check-type" hidden="{{item.checkState==1}}">未审核</view>
@@ -97,132 +61,7 @@
         </scroll-view>
     </view>
     <!-- 分析部分 -->
-    <scroll-view class="list-container" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-76/rpxR-hair-50)*2}}rpx;" wx:if="{{IO==2&&brand!='iphonex'}}" class="flexc0c analysis-box">
-        <view class="chartbar1-box">
-            <view class="chartbar1-top flexrcc">
-                <view class="previous" bind:tap="previous">前一年</view>
-                <view class="thisyear">{{thisyear}}年</view>
-                <view class="next" bind:tap="next">后一年</view>
-            </view>
-            <view class="chartbar1-title flexr0c">
-                <view class="label-line"></view>
-                <view class="label-title">月度收支</view>
-                <view class="label-sub">单位（万元）</view>
-            </view>
-            <view class="chartbar1-box-item">
-                <ec-canvas id="mychart-dom-bar1" canvas-id="mychart-bar1" ec="{{ecbar}}" bind:tap="changeMonth"></ec-canvas>
-            </view>
-        </view>
-        <view class="chartbar2-box flexc0c">
-            <view class="chartbar2-top flexc0c">
-                <view class="chartbar2-title">{{startMonth}}---{{endMonth}}</view>
-                <view class="inout-box flexr0c">
-                    <view class="income flexr0c">
-                        <view class="income-label">收入</view>
-                        <view class="income-num">+{{incomeMoney}}</view>
-                    </view>
-                    <view class="split-line2"></view>
-                    <view class="outcome flexr0c">
-                        <view class="outcome-label">支出</view>
-                        <view class="outcome-num">-{{outcomeMoney}}</view>
-                    </view>
-                </view>
-            </view>
-            <view class="" hidden="{{!cityRank}}">
-                <view class="chartbar2-title flexrb">
-                    <view class="inout-label-box flexr0c">
-                        <view class="label-line"></view>
-                        <view class="label-title">各市县出入金排名</view>
-                    </view>
-                    <view class="inout-btn flexr0c">
-                        <view bindtap="income" class="income-btn {{inoutBtn=='in'?'inout-active':''}}">
-                            入金
-                        </view>
-                        <view bindtap="outcome" class="outcome-btn {{inoutBtn=='out'?'inout-active':''}}">
-                            出金
-                        </view>
-                    </view>
-                </view>
-                <view class="chartbar2-container">
-                    <view class="" wx:for="{{rankList}}" wx:key="index">
-                        <view class="city-name">市县名称</view>
-                        <view class="flexrbc">
-                            <!-- <view class="income-line-item" style="width:{{item*502/rankList[0]}}rpx"></view> -->
-                            <view class="income-line-item"></view>
-                            <view class="income-item-num"></view>
-                        </view>
-                        <view class="flexrbc">
-                            <view class="outcome-line-item"></view>
-                            <view class="outcome-item-num"></view>
-                        </view>
-                    </view>
-                </view>
-                <view class="chartbar2-table">
-                    <view class="table-title flexr0c">
-                        <view class="title-address">市县</view>
-                        <view class="title-income">月度入金</view>
-                        <view class="title-outcome">月度出金</view>
-                    </view>
-                    <view class="table-item flexr0c" wx:for="{{tabel}}" wx:key="index">
-                        <view class="{{index%2==0?'table-backfff':'table-backyellow'}}">
-                            {{item.name}}
-                        </view>
-                        <view class="{{index%2==0?'table-backfff':'table-backyellow'}} table-income">
-                            {{item.income}}
-                        </view>
-                        <view class="{{index%2==0?'table-backfff':'table-backyellow'}}">
-                            {{item.outcome}}
-                        </view>
-                    </view>
-                </view>
-            </view>
-        </view>
-        <view class="chartline-box">
-            <view class="chartline-top flexr0c">
-                <view class="label-line"></view>
-                <view class="label-title">每日缴款</view>
-                <view class="label-sub">单位（万元）</view>
-            </view>
-            <view class="chartline-container">
-                <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ecline}}"></ec-canvas>
-            </view>
-        </view>
-        <view class="chartpie-box">
-            <view class="chartpie-top flexr0c">
-                <view class="label-line"></view>
-                <view class="label-title">交易类型占比</view>
-            </view>
-            <view class="chartpie-container">
-                <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ ecpie }}"></ec-canvas>
-            </view>
-        </view>
-        <view class="rankcompany">
-            <view class="chart-top-left flexr0c">
-                <view class="label-line"></view>
-                <view class="chart-top-left-title">企业缴纳排名（前十）</view>
-            </view>
-            <view class="rank-tabel">
-                <view class="rank-tabel-item" wx:for="{{needfold?rankshort:rank}}" wx:key="index">
-                    <view class="rank-title">{{item.name?item.name:'(空)'}}</view>
-                    <view class="flexr0c">
-                        <view class="progress-bar {{brand=='an'?'pro-an':''}} {{brand=='iphone'?'pro-iphone':''}} {{brand=='iphonex'?'pro-iphonex':''}}">
-                            <view class="progress {{brand=='an'?'pro-an':''}} {{brand=='iphone'?'pro-iphone':''}} {{brand=='iphonex'?'pro-iphonex':''}}" style="width:{{item.money/rankshort[0].money*560}}rpx;color:#E3A33D;"></view>
-                        </view>
-                        <view class="progress-num">{{item.money}}</view>
-                    </view>
-                </view>
-            </view>
-            <view class="unfold flexrcc" bindtap="fold" data-type="needunfold" hidden="{{!needfold}}">
-                <view class="unfold-title">展开</view>
-                <image src="../../assets/images/10openarrow.png"></image>
-            </view>
-            <view class="fold flexrcc" bindtap="fold" data-type="needfold" hidden="{{needfold}}">
-                <view class="fold-title">收起</view>
-                <image src="../../assets/images/11closearrow.png"></image>
-            </view>
-        </view>
-    </scroll-view>
-    <scroll-view class="list-container"  scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-76/rpxR-hair-50)*2}}rpx;" wx:if="{{IO==2&&brand=='iphonex'}}" class="flexc0c analysis-box">
+    <scroll-view class="list-container" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-hair-44-50-56)}}px;" wx:if="{{IO==2}}" class="flexc0c analysis-box">
         <view class="chartbar1-box">
             <view class="chartbar1-top flexrcc">
                 <view class="previous" bind:tap="previous">前一年</view>
