--- a/pages/inoutdetail/inoutdetail.wxml
+++ b/pages/inoutdetail/inoutdetail.wxml
@@ -23,9 +23,9 @@
                 <view class="outcome-num">-{{outcomeMoney}}</view>
             </view>
         </view>
-        <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-hair-44-50-50-56)}}px;">
+        <scroll-view class="" scroll-top="{{scrolltop}}" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-hair-44-50-50-56)}}px;">
             <view class="list-box">
-                <view class="list-item flexrbc" wx:for="{{list}}" wx:key="index">
+                <view class="list-item flexrbc" wx:for="{{list}}" wx:key="index" bind:tap="toDetail" data-id="{{item.id}}" data-sign="{{item.sign}}">
                     <view class="check-type" hidden="{{item.checkState==1}}">未审核</view>
                     <view class="list-item-left flexr">
                         <image class="paytype" src="../../assets/images/WeChat.png" hidden="{{item.tradeType!=4}}"></image>
@@ -48,7 +48,7 @@
                                 <text hidden="{{item.sign!=2}}">-</text>
                                 {{item.money}}
                             </view>
-                            <image src="../../assets/images/The arrow.png" />
+                            <image src="../../assets/images/rightarrow.png" />
                         </view>
                         <view hidden="{{item.checkState==1}}" class="in-type">入账中</view>
                     </view>
@@ -108,16 +108,23 @@
                     </view>
                 </view>
                 <view class="chartbar2-container">
-                    <view class="" wx:for="{{rankList}}" wx:key="index">
-                        <view class="city-name">市县名称</view>
-                        <view class="flexrbc">
-                            <!-- <view class="income-line-item" style="width:{{item*502/rankList[0]}}rpx"></view> -->
-                            <view class="income-line-item"></view>
-                            <view class="income-item-num"></view>
+                    <view class="" wx:for="{{tabel}}" wx:key="index">
+                        <view class="city-name">{{item.name}}</view>
+                        <view class="flexrbc" hidden="{{inoutBtn!='in'}}">
+                            <view class="income-line-item" style="width:{{500*item.income/tabel[0].income}}rpx"></view>
+                            <view class="income-item-num">{{item.income}}</view>
                         </view>
-                        <view class="flexrbc">
-                            <view class="outcome-line-item"></view>
-                            <view class="outcome-item-num"></view>
+                        <view class="flexrbc" hidden="{{inoutBtn!='in'}}">
+                            <view class="outcome-line-item" style="width:{{500*item.outcome/tabel[0].income}}rpx"></view>
+                            <view class="outcome-item-num">{{item.outcome}}</view>
+                        </view>
+                        <view class="flexrbc" hidden="{{inoutBtn!='out'}}">
+                            <view class="outcome-line-item" style="width:{{500*item.outcome/tabel[0].outcome}}rpx"></view>
+                            <view class="outcome-item-num">{{item.outcome}}</view>
+                        </view>
+                        <view class="flexrbc" hidden="{{inoutBtn!='out'}}">
+                            <view class="income-line-item" style="width:{{500*item.income/tabel[0].outcome}}rpx"></view>
+                            <view class="income-item-num">{{item.income}}</view>
                         </view>
                     </view>
                 </view>
@@ -170,9 +177,9 @@
                     <view class="rank-title">{{item.name?item.name:'(空)'}}</view>
                     <view class="flexr0c">
                         <view class="progress-bar {{brand=='an'?'pro-an':''}} {{brand=='iphone'?'pro-iphone':''}} {{brand=='iphonex'?'pro-iphonex':''}}">
-                            <view class="progress {{brand=='an'?'pro-an':''}} {{brand=='iphone'?'pro-iphone':''}} {{brand=='iphonex'?'pro-iphonex':''}}" style="width:{{item.money/rankshort[0].money*560}}rpx;color:#E3A33D;"></view>
+                            <view class="progress {{brand=='an'?'pro-an':''}} {{brand=='iphone'?'pro-iphone':''}} {{brand=='iphonex'?'pro-iphonex':''}}" style="width:{{item.money/rankshort[0].money*560}}rpx;color:#E3A33D;background:url('http://192.168.2.227:8004/wechat-finance/image/split.png');"></view>
                         </view>
-                        <view class="progress-num">{{item.money}}</view>
+                        <view class="progress-num">{{item.money}}元</view>
                     </view>
                 </view>
             </view>
@@ -211,11 +218,19 @@
         <view class="drawer-top-box">
             <view class="drawer-top">
                 <view class="drawer-top-label">企业名称</view>
-                <input type="text" bindinput="changeComName" placeholder="请输入您要查找的企业名称" placeholder-class="input-placeholder" />
+                <input type="text" bindinput="changeComName" placeholder="请输入您要查找的企业名称" placeholder-class="input-placeholder" value="{{companyname}}" />
                 <view class="drawer-top-label">交易单号</view>
-                <input type="text" bindinput="changeDealId" placeholder="请输入您要查找的交易单号" placeholder-class="input-placeholder" />
-                <view class="drawer-top-label">地区</view>
-                <input type="text" bindinput="changeLocation" placeholder="请输入您要查找的地区" placeholder-class="input-placeholder" />
+                <input type="text" bindinput="changeDealId" placeholder="请输入您要查找的交易单号" placeholder-class="input-placeholder" value="{{dealId}}" />
+                <view class="drawer-top-label" hidden="{{!cityRank}}">地区</view>
+                <!-- <input type="text" bindinput="changeLocation" placeholder="请输入您要查找的地区" placeholder-class="input-placeholder" value="{{location}}" /> -->
+                <view class="" hidden="{{!cityRank}}">
+                    <picker bindchange="bindPickerChange" value="{{addIndex}}" range="{{locationList}}">
+                        <view class="{{addIndex==0?'location-box':'location-box-select'}}">
+                            {{locationList[addIndex]}}
+                        </view>
+                    </picker>
+                </view>
+                <!-- <view class="location-box">{{}}</view> -->
             </view>
         </view>
         <view class="money-box">
@@ -229,9 +244,9 @@
                 <view data-index="5" class="{{radio==5?'btn-active':'btn'}}">不限制</view>
             </view>
             <view class="input-box flexrbc">
-                <input type="text" bindinput="changeMin" name="" id=""></input>
+                <input type="text" bindinput="changeMin" value="{{minMoney}}" name="" id=""></input>
                 <view class="to-line"></view>
-                <input type="text" bindinput="changeMax"></input>
+                <input type="text" bindinput="changeMax" value="{{maxMoney}}"></input>
             </view>
         </view>
         <view class="paytype-box">
@@ -257,7 +272,7 @@
             </van-checkbox>
         </view>
         <view class="bottom-btn-box flexr0c">
-            <view class="bottom-btn-cancel" bind:tap="cancelBtn">取消</view>
+            <view class="bottom-btn-cancel" bind:tap="cancelBtn">重置</view>
             <view class="bottom-btn-comfirm" bind:tap="comfirmBtn">确定</view>
         </view>
     </view>
