--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,4 +1,4 @@
-<view class="container flexc0c" style="background:url('../../assets/images/Login page background.png') no-repeat;background-size:100vw 80vh">
+<view class="container flexc0c" style="background:url('http://192.168.2.227:8004/wechat-finance/image/Login.png') no-repeat;background-size:100vw 80vh">
     <van-nav-bar title="登录" />
     <view class="title-box flexc0c">
         <view class="title">欢迎使用</view>
@@ -7,13 +7,13 @@
     <view class="form-box flexc0c">
         <view class="flexr0c username-box">
             <view class="label">用户名</view>
-            <input type="text" bindinput="userName" class="username" placeholder="请输入您的用户名" placeholder-class="input-placeholder" name="" id="" />
+            <input type="text" bindinput="userName" class="username" placeholder="请输入您的用户名" placeholder-class="input-placeholder" value="{{username}}" name="" id="" />
         </view>
         <view class="flexr0c password-box">
             <view class="label">密码</view>
-            <input password bindinput="passWord" class="password" placeholder="请输入您的密码" placeholder-class="input-placeholder" name="" id="" />
+            <input password bindinput="passWord" class="password" placeholder="请输入您的密码" placeholder-class="input-placeholder" value="{{password}}" name="" id="" />
         </view>
-        <view bind:tap="login" class="login-btn">登录</view>
+        <view bind:tap="login" class="{{inputpass?'login-btn-active':'login-btn'}}">登录</view>
     </view>
     <view class="bottom-info">
         <view class="flexrbc">
