--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -111,6 +111,19 @@
   line-height: 84rpx;
 }
 
+.container .form-box .login-btn-active {
+  background-image: linear-gradient(0deg, #D36221 0%, #F2AD3C 100%, #F7E7AC 100%);
+  border-radius: 6rpx;
+  text-align: center;
+  font-family: PingFangSC-Regular;
+  font-size: 34rpx;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  width: 642rpx;
+  height: 84rpx;
+  line-height: 84rpx;
+}
+
 .container .bottom-info {
   font-family: PingFangHK-Regular;
   font-size: 20rpx;
