--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -5,21 +5,21 @@
 			<view class="label">密码修改</view>
 			<view class="list-item-right flexr0c">
 				<view class="size"></view>
-				<image src="../../assets/images/The arrow.png" alt="" />
+				<image src="../../assets/images/rightarrow.png" alt="" />
 			</view>
 		</view>
 		<view class="list-item flexrbc" bindtap="clearStorage">
 			<view class="label">清除缓存</view>
 			<view class="list-item-right flexr0c">
 				<view class="size">{{size}}K</view>
-				<image src="../../assets/images/The arrow.png" alt="" />
+				<image src="../../assets/images/rightarrow.png" alt="" />
 			</view>
 		</view>
 		<view class="list-item flexrbc" bindtap="logOut">
 			<view class="label">退出登录</view>
 			<view class="list-item-right flexr0c">
 				<view class="size"></view>
-				<image src="../../assets/images/The arrow.png" alt="" />
+				<image src="../../assets/images/rightarrow.png" alt="" />
 			</view>
 		</view>
 	</view>
